--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "[my-framework] build --output public"
   },
   "author": "mangesh",
   "license": "ISC",
@@ -14,4 +15,6 @@
     "mongoose": "^8.15.1",
     "serverless-http": "^3.2.0"
   }
+  
 }
+
